# my_ner

./: README.md  pyproject.toml
data/: samples.jsonl  samples2.jsonl  samples_pad.jsonl
src/: dataset.py  debug2heads.py  evaluate.py  extract_topic_target.py  freq_demo.py  model.py  otameshi.py  otameshi2head.py  pad_labels.py  run.py  run2heads.py  test.py  train.py  utils.py
src/.ipynb_checkpoints/: visualize-checkpoint.ipynb
