[tool.poetry]
name = "my_ner"
version = "0.1.0"
description = ""
authors = ["jam0818 <n.kawamura0818@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
torch = "^1.9.1"
transformers = "^4.11.3"
seqeval = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
