[tool.poetry]
name = "my_ner"
version = "0.1.0"
description = ""
authors = ["jam0818 <n.kawamura0818@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
torch = "^1.9.1"
transformers = "^4.11.3"
seqeval = "^1.2.2"
jupyter = "^1.0.0"
pyclustering = "^0.10.1"
plotly = "^5.3.1"
statsmodels = "^0.13.1"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.0"
dtw = "^1.4.0"
fastdtw = "^0.3.4"
pyknp = "^0.6.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
